--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ MONGO_URI=mongodb+srv://scribe:scribe%402k26@scribe.f32bblr.mongodb.net/?appName
 JWT_SECRET=supersecretkeyChangeThisInProduction
 EMAIL_USER=madhavangl20@gmail.com
 EMAIL_PASS=jwlymsdxflmmivbo
-FRONTEND_URL=https://scribe-frontend-zeta.vercel.app
+FRONTEND_URL=https://bioethics-eportfolio.com
