new push for godaddy email

--- a/.env
+++ b/.env
@@ -2,6 +2,9 @@ PORT=5000
 # MONGO_URI=mongodb+srv://madhavangopideveloper_db_user:scribe%402k26@scribe-cluster.5v8lxaz.mongodb.net/college-cms?retryWrites=true&w=majority&appName=scribe-cluster
 MONGO_URI=mongodb+srv://scribe:scribe%402k26@scribe.f32bblr.mongodb.net/?appName=scribe
 JWT_SECRET=supersecretkeyChangeThisInProduction
-EMAIL_USER=madhavangl20@gmail.com
-EMAIL_PASS=jwlymsdxflmmivbo
+EMAIL_USER=admin@bioethics-eportfolio.com
+EMAIL_PASS=scribe@mailpass
+EMAIL_HOST=smtpout.secureserver.net
+EMAIL_PORT=465
+EMAIL_SECURE=true
 FRONTEND_URL=https://bioethics-eportfolio.com
